--- a/packages/SystemUI/res/values/bs_dimens.xml
+++ b/packages/SystemUI/res/values/bs_dimens.xml
@@ -103,4 +103,8 @@
     <dimen name="pie_item_size">40dp</dimen>
     <dimen name="pie_panel_padding">20dp</dimen>
 
+    <dimen name="notification_large_icon_width">64dp</dimen>
+    <dimen name="notification_large_icon_height">64dp</dimen>
+    <dimen name="notification_subtext_size">12dp</dimen>
+
 </resources>
