OnTheSpot: Forward implement infrastructure [1/2]
* An alert dialog in da face system to explain features and behaviours to users.
* Implements Gif support:
  Now features can be explained in yummy animated goodness (cit. Aaron)
  GifView supports adding gifs programmatically or via xml using custom:gif=""

Contributors:
@D4rKn3sSyS
@aaronpoweruser
@Anu6is
@BigBrother1984

Signed-off-by: @BigBrother1984 <carlosavignano@aospa.co>
Change-Id: I725a8164c13c5381ddbc15fde29902a258c1ecc4
Signed-off-by: scott <scott@ubuntu>

Conflicts:
	core/res/res/values/pa_strings.xml
	core/res/res/values/pa_symbols.xml

--- a/core/res/res/values/cm_strings.xml
+++ b/core/res/res/values/cm_strings.xml
@@ -259,4 +259,9 @@
 
     <!-- screenrecord in the power menu -->
     <string name="powermenu_screenrecord">Screen record</string>
+
+    <!-- Setting confirmation dialog strings. Shown when any UI interaction can be modified by user input -->
+    <string name="setting_confirmation_ask_me_later">Ask later</string>
+    <string name="setting_confirmation_yes">Yes</string>
+    <string name="setting_confirmation_no">No</string>
 </resources>
