--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2141,4 +2141,6 @@
          applied. -->
     <bool name="config_hasRemovableLid">false</bool>
 
+    <!-- Ignored sms packages -->
+    <string-array name="config_ignored_sms_packages"></string-array>
 </resources>
