rename vanir action
Change-Id: Idb6703040707dd17dfdfb15b2b687d2595970118
Signed-off-by: scott <scott@ubuntu>

--- a/core/res/res/values/cm_strings.xml
+++ b/core/res/res/values/cm_strings.xml
@@ -245,7 +245,7 @@
     <string name="action_vib">Ring/Vibrate</string>
     <string name="action_silent_vib">Ring/Vibrate/Silent</string>
     <string name="action_ribbon">Ribbon</string>
-    <string name="action_app">Custom App/Vanir action</string>
+    <string name="action_app">Custom App/Beanstalk action</string>
     <string name="action_arrow_left">Cursor left</string>
     <string name="action_arrow_right">Cursor right</string>
     <string name="action_arrow_up">Cursor up</string>
