Revert "SystemUI: Create expandable volume panel."
This reverts commit 4dbc431505db2c44fc1ff97d1b0e7e302b384d87.

--- a/packages/SystemUI/res/layout/volume_panel.xml
+++ b/packages/SystemUI/res/layout/volume_panel.xml
@@ -18,8 +18,7 @@
     android:id="@+id/visible_panel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:animateLayoutChanges="true" >
+    android:orientation="vertical" >
 
     <FrameLayout
         android:id="@+id/slider_panel"
@@ -35,13 +34,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/zen_mode_panel" />
-
-    <LinearLayout
-        android:id="@+id/expanded_panel"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:animateLayoutChanges="true"
-        android:visibility="gone" />
 
 </LinearLayout>
