--- a/core/res/res/values/cm_strings.xml
+++ b/core/res/res/values/cm_strings.xml
@@ -254,4 +254,6 @@
     <string name="def_ime_layout">**arrow_left**,,,|**arrow_up**,,,|**arrow_down**,,,|**arrow_right**,,,</string>
     <string name="def_navbar_layout">**back**,,,|**home**,,,|**recents**,,,</string>
 
+    <!-- screenshot in the power menu -->
+    <string name="powermenu_screenshot">Screenshot</string>
 </resources>
