cleanup framework values for housekeeping purposes
Change-Id: I10c5e9db0351810cbda595ced0976b9cfcb071a0
Signed-off-by: scott <scott@beanstalk.com>

--- a/packages/SystemUI/res/values/bs_colors.xml
+++ b/packages/SystemUI/res/values/bs_colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
- * Copyright 2010, The Android Open Source Project
+ * Copyright 2013, The Android Open Kang Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,23 @@
  */
 -->
 <resources>
+
     <!-- Floating action button -->
     <color name="fab_color">#ff009688</color>
     <color name="floating_action_button_icon_color">#ffffff</color>
+
+    <!-- Gesture Anywhere specific colors -->
+    <color name="gesture_overlay_background_fill_color">#80000000</color>
+    <color name="gesture_color">@android:color/holo_blue_light</color>
+
+    <!-- Pie controls -->
+    <color name="pie_overlay_color">#ff000000</color>
+    <color name="pie_snap_color">#ff009688</color>
+    <color name="pie_text_color">#ff009688</color>
+    <color name="pie_foreground_color">#ff009688</color>
+    <color name="pie_background_color">#ff000000</color>
+    <color name="pie_selected_color">#ff5c5c5c</color>
+    <color name="pie_long_pressed_color">#ff8c8c8c</color>
+    <color name="pie_outline_color">#ff5c5c5c</color>
+
 </resources>
