--- a/packages/SystemUI/res/values/bs_dimens.xml
+++ b/packages/SystemUI/res/values/bs_dimens.xml
@@ -16,12 +16,29 @@
 */
 -->
 <resources>
+    <!-- App circle sidebar -->
+    <dimen name="app_sidebar_trigger_width">12dip</dimen>
+    <dimen name="app_sidebar_listview_width">160dp</dimen>
+    <dimen name="app_sidebar_icon_width">72dp</dimen>
+    <dimen name="app_sidebar_icon_height">72dp</dimen>
+
     <!-- Floating action button -->
     <dimen name="floating_action_button_height">54dp</dimen>
     <dimen name="floating_action_button_width">54dp</dimen>
     <dimen name="floating_action_button_translation_z">12dp</dimen>
     <dimen name="floating_action_button_margin_side">42dp</dimen>
     <dimen name="floating_action_button_margin_bottom">38dp</dimen>
+
+    <!-- The width of the view containing the menu status bar icon -->
+    <dimen name="navigation_menu_key_width">40dip</dimen>
+    <!-- The width of the view containing the layout changer icon -->
+    <dimen name="navigation_layout_changer_width">25dip</dimen>
+
+    <!-- Network traffic monitor single-line text size -->
+    <dimen name="net_traffic_single_text_size">12dp</dimen>
+
+    <!-- Network traffic monitor multi-line text size -->
+    <dimen name="net_traffic_multi_text_size">9dp</dimen>
 
     <!-- Pie controls -->
     <dimen name="pie_padding">4dp</dimen>
