--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -76,7 +76,9 @@
     <string name="quick_settings_compass_init">Initializing\u2026</string>
     <string name="quick_settings_lockscreen_label">Lock screen</string>
     <string name="quick_settings_network_adb_label">ADB over network</string>
+    <string name="quick_settings_lte_label">LTE</string>
     <string name="quick_settings_visualizer_label" translatable="false">AudioFX</string>
+    <string name="quick_settings_screen_timeout_detail_title">Screen timeout</string>
 
     <!-- Task Manager -->
     <string name="tasklistview_title">Task Manager</string>
@@ -91,6 +93,4 @@
 
     <string name="quick_settings_network_adb_enabled_label">Enabled</string>
     <string name="quick_settings_network_adb_disabled_label">Disabled</string>
-
-    <string name="quick_settings_lte_tile_title">LTE</string>
 </resources>
