--- a/packages/SystemUI/res/values/bs_strings.xml
+++ b/packages/SystemUI/res/values/bs_strings.xml
@@ -66,4 +66,7 @@
     <string name="quick_settings_sync">Sync</string>
     <string name="quick_settings_sync_off">Sync off</string>
 
+    <!-- Quick settings -->
+    <string name="quick_settings_screenshot">Screenshot</string>
+
 </resources>
