QS: add Sync tile (1/2)
Change-Id: I0c0bb51e736a01661566f1118f955e32eba96063
Signed-off-by: scott <scott@beanstalk.com>

Conflicts:
	core/java/com/android/internal/util/cm/QSConstants.java
	packages/SystemUI/res/values/cm_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QSTileHost.java

Conflicts:
	packages/SystemUI/res/values/cr_strings.xml

--- a/packages/SystemUI/res/values/bs_strings.xml
+++ b/packages/SystemUI/res/values/bs_strings.xml
@@ -62,4 +62,8 @@
     <string name="wifi_address_changed">Wi\u2011Fi SSID changed to <xliff:g id="name">%s</xliff:g></string>
     <string name="wifi_changed_ticker">Wi\u2011Fi SSID: <xliff:g id="name">%s</xliff:g></string>
 
+    <!-- QS Tiles -->
+    <string name="quick_settings_sync">Sync</string>
+    <string name="quick_settings_sync_off">Sync off</string>
+
 </resources>
