--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -95,6 +95,7 @@
     <string name="quick_settings_network_adb_disabled_label">Disabled</string>
 
     <!-- Navigation ring shortcuts -->
+    <string name="navbar_dialog_title">Choose action to assign</string>
     <string name="navigation_ring_title">Quick launch shortcuts</string>
     <string name="navring_target_reset_message">Delete all user created navigation bar shortcuts and restore to default?</string>
     <string name="navring_target_reset">Navigation bar shortcuts reset to default</string>
