--- a/packages/SystemUI/res/values/cm_dimens.xml
+++ b/packages/SystemUI/res/values/cm_dimens.xml
@@ -20,4 +20,9 @@
     <dimen name="detail_radio_group_padding">8dp</dimen>
     <dimen name="qs_tile_icon_size_visualizer">40dp</dimen>
 
+    <!-- Themes: radius of the corners of the notification dropshadow
+         See also: notification_material_rounded_rect_radius
+    -->
+    <dimen name="notification_material_shadow_rounded_rect_radius">0dp</dimen>
+
 </resources>
