[1/3] base: Implement ambient display as Active Display
Currently Ambient Display fully support if device has
  Significant motion sensor and wake gesture sensor

with this change allow Ambient Display to work like
    Active Display

-- Allow wake up using shake event
-- use different class to manage sensor

enable this via overlay custom_config.xml

inside Frameworks base

    <!-- Doze: force using accelerometer as pick up sensor -->
    <bool name="config_dozeUseAccelerometer">false</bool>

inside System UI

    <!-- Doze: shake accelerometer threshold -->
    <integer name="doze_shake_accelerometer_threshold">10</integer>

also dont forget to setup other value for Ambient Display

see https://gerrit.omnirom.org/10140

PS. 12 : prepare for user configurations

<!------------------------------------------------------------>

NOTE:
   Shake event aka Wake up will not triggered until
   Proximity is Covered (need to put inside pocket)

   for shake accelerometer, you must setup based on your device
   each device has different threshold

<!------------------------------------------------------------>

NOTE 2 :

   you can also overwrite all value for Ambient Display inside BUILD.PROP
   but i recommend only overwrite value from overlay fw base and system Ui

   example value inside BUILD.PROP :

   <!-- Doze: does this device support STATE_DOZE and STATE_DOZE_SUSPEND?  -->
   doze.display.supported=true

   <!-- Doze: pulse parameter - how long does it take to fade in? -->
   doze.pulse.duration.in=1000

   <!-- Doze: pulse parameter - once faded in, how long does it stay visible? -->
   doze.pulse.duration.visible=3000

   <!-- Doze: pulse parameter - how long does it take to fade out? -->
   doze.pulse.duration.out=1000

   <!-- Doze: should notifications be used as a pulse signal? -->
   doze.pulse.notifications=true

   <!-- Doze: when to pulse after a buzzworthy notification arrives -->
   doze.pulse.schedule=1s,10s,30s,60s,120s

   <!-- Doze: maximum number o

--- a/core/res/res/values/bs_symbols.xml
+++ b/core/res/res/values/bs_symbols.xml
@@ -157,4 +157,6 @@
   <java-symbol type="string" name="setting_confirmation_ask_me_later" />
   <java-symbol type="string" name="setting_confirmation_yes" />
   <java-symbol type="string" name="setting_confirmation_no" />
+
+  <java-symbol type="bool" name="config_dozeUseAccelerometer" />
 </resources>
