--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2138,6 +2138,9 @@
          applied. -->
     <bool name="config_hasRemovableLid">false</bool>
 
+    <!-- Doze: force using accelerometer as pick up sensor -->
+    <bool name="config_dozeUseAccelerometer">false</bool>
+
     <!-- Boolean to enable Stylus gestures -->
     <bool name="config_stylusGestures">false</bool>
 
