QS: add Brightness tile
* long press to toggle auto/manual brightness

Drawables by Alexander Westphal <westphal.alex94@gmail.com>

Change-Id: I173281dbaba5945f0f99071639ddccee6a6ca365

@alviteri: remove secondary click

Signed-off-by: scott <scott@beanstalk.com>

Conflicts:
	core/java/com/android/internal/util/cm/QSConstants.java
	packages/SystemUI/res/values/custom_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QSTileHost.java

Conflicts:
	packages/SystemUI/res/values/cr_strings.xml

--- a/packages/SystemUI/res/values/bs_strings.xml
+++ b/packages/SystemUI/res/values/bs_strings.xml
@@ -64,5 +64,6 @@
     <string name="quick_settings_screenshot">Screenshot</string>
     <string name="quick_settings_battery_saver">Battery saver</string>
     <string name="quick_settings_battery_saver_off">Battery saver off</string>
+    <string name="quick_settings_brightness">Brightness</string>
 
 </resources>
