--- a/packages/SystemUI/res/values/bs_strings.xml
+++ b/packages/SystemUI/res/values/bs_strings.xml
@@ -62,5 +62,7 @@
     <string name="quick_settings_screenrecord">Screenrecord</string>
     <string name="quick_settings_screenrecord_on">Recording ...</string>
     <string name="quick_settings_screenshot">Screenshot</string>
+    <string name="quick_settings_battery_saver">Battery saver</string>
+    <string name="quick_settings_battery_saver_off">Battery saver off</string>
 
 </resources>
